WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263317
[MSE][GStreamer] Pause after seek is not working
https://bugs.webkit.org/show_bug.cgi?id=263317
Summary
[MSE][GStreamer] Pause after seek is not working
Xabier Rodríguez Calvar
Reported
2023-10-18 04:21:38 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Xabier Rodríguez Calvar
Comment 1
2023-10-18 05:05:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19221
EWS
Comment 2
2024-02-02 00:25:00 PST
Committed
273977@main
(e54b6b088781): <
https://commits.webkit.org/273977@main
> Reviewed commits have been landed. Closing PR #19221 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-02 00:26:16 PST
<
rdar://problem/122170415
>
Xabier Rodríguez Calvar
Comment 4
2024-02-07 01:23:09 PST
There are still some cases where this fails
Xabier Rodríguez Calvar
Comment 5
2024-02-07 01:36:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23990
EWS
Comment 6
2024-02-15 05:57:16 PST
Committed
274730@main
(f270bdb7b34c): <
https://commits.webkit.org/274730@main
> Reviewed commits have been landed. Closing PR #23990 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug