Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp
@@ -318,18 +318,20 @@ void MediaPlayerPrivateGStreamerMSE::sourceSetup(GstElement* sourceElement)
 
 void MediaPlayerPrivateGStreamerMSE::updateStates()
 {
+    bool isSeeking = isPipelineSeeking();
     bool shouldBePlaying = (!m_isPaused && readyState() >= MediaPlayer::ReadyState::HaveFutureData && m_playbackRatePausedState != PlaybackRatePausedState::RatePaused)
         || m_playbackRatePausedState == PlaybackRatePausedState::ShouldMoveToPlaying;
-    GST_DEBUG_OBJECT(pipeline(), "shouldBePlaying = %s, m_isPipelinePlaying = %s", boolForPrinting(shouldBePlaying), boolForPrinting(m_isPipelinePlaying));
-    if (shouldBePlaying && !m_isPipelinePlaying) {
-        if (!changePipelineState(GST_STATE_PLAYING))
+    GST_DEBUG_OBJECT(pipeline(), "shouldBePlaying = %s, m_isPipelinePlaying = %s, is seeking %s", boolForPrinting(shouldBePlaying),
+        boolForPrinting(m_isPipelinePlaying), boolForPrinting(isSeeking));
+    if (!isSeeking && shouldBePlaying && !m_isPipelinePlaying) {
+        auto result = changePipelineState(GST_STATE_PLAYING);
+        if (result == ChangePipelineStateResult::Failed)
             GST_ERROR_OBJECT(pipeline(), "Setting the pipeline to PLAYING failed");
-        m_isPipelinePlaying = true;
-        m_playbackRatePausedState = PlaybackRatePausedState::Playing;
-    } else if (!shouldBePlaying && m_isPipelinePlaying) {
-        if (!changePipelineState(GST_STATE_PAUSED))
+        else if (result == ChangePipelineStateResult::Ok)
+            m_playbackRatePausedState = PlaybackRatePausedState::Playing;
+    } else if (!isSeeking && !shouldBePlaying && m_isPipelinePlaying) {
+        if (changePipelineState(GST_STATE_PAUSED) == ChangePipelineStateResult::Failed)
             GST_ERROR_OBJECT(pipeline(), "Setting the pipeline to PAUSED failed");
-        m_isPipelinePlaying = false;
     }
 }
 
